[package]
name = "wbm-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-recursion = "1.0.0"
chrono = "0.4.3"
clap = { version = "4.5.18", features = [ "derive" ]}
futures = "0.3.21"
lazy_static = "1.4.0"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = [ "json" ] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = [ "full" ]}
urlencoding = "2.1.0"
